fix design + comms spacing

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -156,7 +156,7 @@ h2 {
 
 .graphics-column-two {
   grid-column: 2 / 2;
-  min-width: 500px;
+  min-width: 0;
   padding-right: 20px;
 }
 
